[package]
name = "xaver"
version = "0.1.0"
authors = ["HG Minerva <hgminerva@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
sp-io = { version = "23.0.0", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime = { version = "24.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "sp-runtime/std",
    "sp-io/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
